# sphttps-github.com-users-rentziass-achievements-pair-extraordinaireec-kit

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
docs/: context-management.md
src/apm_cli/: __init__.py  cli.py  config.py  factory.py  version.py
src/apm_cli/adapters/: __init__.py
src/apm_cli/adapters/client/: __init__.py  base.py  codex.py  vscode.py
src/apm_cli/adapters/package_manager/: __init__.py  base.py  default_manager.py
src/apm_cli/commands/: __init__.py  deps.py
src/apm_cli/compilation/: __init__.py  agents_compiler.py  constants.py  constitution.py  constitution_block.py  context_optimizer.py  distributed_compiler.py  injector.py  link_resolver.py  template_builder.py
src/apm_cli/core/: conflict_detector.py  docker_args.py  operations.py  safe_installer.py  script_runner.py  token_manager.py
src/apm_cli/models/: __init__.py  apm_package.py
src/apm_cli/output/: __init__.py  formatters.py  models.py  script_formatters.py
src/apm_cli/primitives/: __init__.py  discovery.py  models.py  parser.py
src/apm_cli/registry/: __init__.py  client.py  integration.py  operations.py
src/apm_cli/utils/: __init__.py  console.py  helpers.py
src/apm_cli/workflow/: __init__.py  discovery.py  parser.py  runner.py
src/specify_cli/: __init__.py
templates/apm/hello-world/: apm.yml
